refactoring
- remove redundant code
- added final
- added private